--- a/package.json
+++ b/package.json
@@ -2,22 +2,30 @@
   "name": "cdms-jpl-api",
   "version": "0.0.1",
   "description": "A simple API to get data from the JPL and CDMS spectroscopy databases",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "bun run build.mjs",
+    "prepublishOnly": "bun run build"
   },
   "author": "A. N. Marimuthu",
   "license": "MIT",
+  "homepage": "https://github.com/aravindhnivas/cdms-jpl-api#readme",
   "repository": {
     "type": "git",
-    "url": "https://github.com/aravindhnivas/cdms-jpl-api.git"
+    "url": "git+https://github.com/aravindhnivas/cdms-jpl-api.git"
   },
+  "files": [
+    "dist"
+  ],
   "keywords": [
     "jpl",
     "cdms",
     "spectroscopy",
     "astronomy",
-    "astrophysics"
+    "astrophysics",
+    "bun"
   ],
   "dependencies": {
     "axios": "^1.6.7",
@@ -25,6 +33,8 @@
     "json2csv": "^6.0.0-alpha.2"
   },
   "devDependencies": {
-    "@types/bun": "^1.0.4"
+    "@types/bun": "^1.0.4",
+    "bun-plugin-dts": "^0.2.1",
+    "typescript": "^5.3.3"
   }
 }
