--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "bun"
   ],
   "dependencies": {
-    "axios": "^1.6.7",
-    "cheerio": "^1.0.0-rc.12",
-    "json2csv": "^6.0.0-alpha.2"
+    "cheerio": "^1.0.0-rc.12"
   },
   "devDependencies": {
+    "axios": "^1.6.7",
+    "json2csv": "^6.0.0-alpha.2",
     "@types/bun": "^1.0.4",
     "bun-plugin-dts": "^0.2.1",
     "typescript": "^5.3.3"
