--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "bun"
   ],
   "dependencies": {
-    "cheerio": "^1.0.0-rc.12"
+    "cheerio": "^1.0.0-rc.12",
+    "crossref": "^1.2.1"
   },
   "devDependencies": {
     "@types/bun": "^1.0.4",
